Fix for detailsview overflow

--- a/src/css/detailsView.css
+++ b/src/css/detailsView.css
@@ -6,7 +6,6 @@
     left: 5%;
     top: 10%;
     width: 330px;
-    max-height: 500px;
     padding-bottom: 30px;
 
     background-color: white;
